Реализованы UserServlet.java, PostServlet.java, UserService, PostService